k8s/kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: gym-dev
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 7070
      targetPort: 7070
  type: ClusterIP
